Compilation_Racket_Mips/piton/tests/errors/no_type_param.py
def a(b): print_int(1)